Fixed navbar (not sticky)
Fixes same iOS issue as 94628f19 (1px horizontal line visible above sticky div). Also fixes elements showing through navbar for 1 frame during render (sticky initially painted offscreen then moved back on next frame, fixed stays where it's supposed to be).

Could remove .container to get dropdown in corner on desktop

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -80,6 +80,11 @@
             @apply text-sm text-base-content text-left px-1 py-2;
         }
     }
+
+    /* Fixed navbar offset */
+    body {
+        @apply pt-20;
+    }
 }
 
 /* Import reusable component utility classes */
